test_suite5/ALAN/test_suite/alan-2022-examples/failing/001440_mutation.alan
source i4 begin call B5E(7, <> 02) end
